# fastp-rs

./: .gitignore  Cargo.toml  README.md  fastp.json  out.r1.fq  out.r2.fq  out_pe_r1.fq  out_pe_r2.fq  report.html  report_polyg.html  report_se.json  test_polyg.fq  test_r1.fq  test_r2.fq
src/: config.rs  html_report.rs  main.rs  threading.rs
src/compress/: mod.rs
src/fastq/: mod.rs
src/filter/: adapter_trimmer.rs  base_correction.rs  matcher.rs  mod.rs  overlap.rs  poly_g.rs  poly_x.rs  sliding_window.rs
