[package]
name = "fastp_rs"
version = "0.1.0"
edition = "2021"
description = "Rust rewrite of fastp: FASTQ preprocessor"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
flate2 = { version = "1.0", features = ["zlib"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
crossbeam = "0.8.4"
num_cpus = "1.17.0"
